checagem de diretorios antes de salvar arquivos

--- a/eda-fifa-24.ipynb
+++ b/eda-fifa-24.ipynb
@@ -10,6 +10,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import os\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -3564,10 +3565,16 @@
    "source": [
     "caminho_arquivo = 'dados\\\\jogadores_fifa_2024_limpo.csv'\n",
     "\n",
+    "# Verifica se a pasta 'dados' existe, caso contrário, cria a pasta\n",
+    "pasta_dados = os.path.dirname(caminho_arquivo)\n",
+    "if not os.path.exists(pasta_dados):\n",
+    "    os.makedirs(pasta_dados)\n",
+    "    print(f\"Pasta criada: {pasta_dados}\")\n",
+    "\n",
     "# Salva o DataFrame no arquivo CSV\n",
     "df_caracteristicas.to_csv(caminho_arquivo, index=False)\n",
     "\n",
-    "print(f\"Arquivo salvo: {caminho_arquivo}\")\n"
+    "print(f\"Arquivo salvo: {caminho_arquivo}\")"
    ]
   },
   {
