--- a/modelagem-knn.ipynb
+++ b/modelagem-knn.ipynb
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neighbors import NearestNeighbors\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os"
    ]
   },
   {
@@ -884,127 +885,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Se quiser salvar como CSV (opcional)\n",
     "nome_arquivo_recomendacoes = f\"recomendacoes\\\\top100_recomendacoes_{jogador_ref}_{id_jogador_ref}.csv\"\n",
-    "top_100.to_csv(nome_arquivo_recomendacoes, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 308,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Player_ID</th>\n",
-       "      <th>Nome</th>\n",
-       "      <th>Nome completo</th>\n",
-       "      <th>Posição</th>\n",
-       "      <th>Overall</th>\n",
-       "      <th>Similaridade</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>251566</td>\n",
-       "      <td>Gabriel Martinelli</td>\n",
-       "      <td>Gabriel Teodoro Martinelli Silva</td>\n",
-       "      <td>Extremo, Meio campo</td>\n",
-       "      <td>84</td>\n",
-       "      <td>0.984683</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>233419</td>\n",
-       "      <td>Raphinha</td>\n",
-       "      <td>Raphael Dias Belloli</td>\n",
-       "      <td>Extremo</td>\n",
-       "      <td>84</td>\n",
-       "      <td>0.978583</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>245367</td>\n",
-       "      <td>X. Simons</td>\n",
-       "      <td>Xavi Quentin Shay Simons</td>\n",
-       "      <td>Extremo, Meio campo</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0.963732</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>201995</td>\n",
-       "      <td>Felipe Anderson</td>\n",
-       "      <td>Felipe Anderson Pereira Gomes</td>\n",
-       "      <td>Atacante, Extremo</td>\n",
-       "      <td>81</td>\n",
-       "      <td>0.963579</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Player_ID                Nome                     Nome completo  \\\n",
-       "1     251566  Gabriel Martinelli  Gabriel Teodoro Martinelli Silva   \n",
-       "2     233419            Raphinha              Raphael Dias Belloli   \n",
-       "3     245367           X. Simons          Xavi Quentin Shay Simons   \n",
-       "4     201995     Felipe Anderson     Felipe Anderson Pereira Gomes   \n",
-       "\n",
-       "               Posição  Overall  Similaridade  \n",
-       "1  Extremo, Meio campo       84      0.984683  \n",
-       "2              Extremo       84      0.978583  \n",
-       "3  Extremo, Meio campo       79      0.963732  \n",
-       "4    Atacante, Extremo       81      0.963579  "
-      ]
-     },
-     "execution_count": 308,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top_4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 309,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Vini Jr.'"
-      ]
-     },
-     "execution_count": 309,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "jogador_ref"
+    "\n",
+    "# Verifica se a pasta 'recomendacoes' existe, caso contrário, cria a pasta\n",
+    "pasta_recomendacoes = os.path.dirname(nome_arquivo_recomendacoes)\n",
+    "if not os.path.exists(pasta_recomendacoes):\n",
+    "    os.makedirs(pasta_recomendacoes)\n",
+    "    print(f\"Pasta criada: {pasta_recomendacoes}\")\n",
+    "\n",
+    "# Salva o DataFrame no arquivo CSV\n",
+    "top_100.to_csv(nome_arquivo_recomendacoes, index=False)\n",
+    "\n",
+    "print(f\"Arquivo salvo: {nome_arquivo_recomendacoes}\")"
    ]
   }
  ],
